add alg decstr remove diam